--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "joi": "^17.12.0",
     "morgan": "~1.9.1",
     "nodemailer": "^6.9.8"
   }
